# ai-commit-helper

./: .gitignore  DELIVERY.md  LICENSE  README.md  package.json  pyproject.toml  requirements.txt  setup.py  test-write.py
community/: reddit_post.md  zhihu_post.md
configs/: deepseek_config.yaml  deepseek_config.yaml.example
docs/: quickstart.md
examples/: basic_usage.py  test_with_real_api.py
scripts/: test_installation.py
src/ai_commit_helper/: __init__.py  cli.py  config.py  core.py  formats.py
tests/: test_core.py
vscode-extension/: README.md  package.json  tsconfig.json
vscode-extension/src/: extension.ts
